--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools" >
+    xmlns:tools="http://schemas.android.com/tools">
 
     <application
         android:allowBackup="true"
@@ -11,21 +11,22 @@
         android:roundIcon="@mipmap/ic_launcher_pickcourt_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Pickcourt"
-        tools:targetApi="31" >
-
+        tools:targetApi="31">
+        <activity
+            android:name=".Activities.Authentication.LoginActivity"
+            android:exported="false" />
+        <activity
+            android:name=".Activities.Authentication.SignUpActivity"
+            android:exported="false" />
         <activity
             android:name=".Activities.SplashActivity"
-            android:exported="true" >
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
-        <activity android:name=".Activities.MainActivity"
-                    android:exported="true">
-        </activity>
-
     </application>
 
 </manifest>
