--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,5 +1,6 @@
 [versions]
 agp = "8.5.1"
+coreSplashscreen = "1.0.1"
 firebaseBom = "33.1.2"
 junit = "4.13.2"
 junitVersion = "1.1.5"
@@ -11,6 +12,7 @@ constraintlayout = "2.1.4"
 gs = "4.4.2"
 
 [libraries]
+core-splashscreen = { module = "androidx.core:core-splashscreen", version.ref = "coreSplashscreen" }
 firebase-analytics = { module = "com.google.firebase:firebase-analytics" }
 firebase-bom = { module = "com.google.firebase:firebase-bom", version.ref = "firebaseBom" }
 junit = { group = "junit", name = "junit", version.ref = "junit" }
