--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
+    <uses-permission android:name="android.permission.INTERNET"/>
 
     <application
         android:allowBackup="true"
@@ -13,14 +14,28 @@
         android:theme="@style/Theme.Pickcourt"
         tools:targetApi="31">
         <activity
-            android:name=".Activities.Authentication.LoginActivity"
+            android:name=".Activities.BaseActivity"
             android:exported="false" />
+        <activity
+            android:name=".Activities.HomeActivity"
+            android:configChanges="keyboardHidden|orientation"
+            android:exported="false"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".Activities.Authentication.LoginActivity"
+            android:configChanges="keyboardHidden|orientation"
+            android:exported="false"
+            android:screenOrientation="portrait" />
         <activity
             android:name=".Activities.Authentication.SignUpActivity"
-            android:exported="false" />
+            android:configChanges="keyboardHidden|orientation"
+            android:exported="false"
+            android:screenOrientation="portrait" />
         <activity
             android:name=".Activities.SplashActivity"
-            android:exported="true">
+            android:configChanges="keyboardHidden|orientation"
+            android:exported="true"
+            android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
